# news-aggregator

./: .gitignore  .last_scrape  LINKEDIN_DRAFT.md  README.md  RESUME_POINTS.md  check_db_integrity.py  demo_retry_email.py  demo_trigger_dynamic.py  publish_instagram_card.py  pyproject.toml  render.yaml  requirements.txt  send_test_digest_with_images.py
.github/workflows/: daily_digest.yml  docker-publish.yml
app/: config.py  daily_runner.py  example.env  main.py  runner.py
app/agent/: base.py  curator_agent.py  digest_agent.py  email_agent.py
app/database/: README.md  check_connection.py  create_tables.py  models.py  repository.py  schema_migrations.py
app/profiles/: user_profile.py
app/scrapers/: anthropic.py  base.py  techcrunch.py  theverge.py
app/services/: base.py  email_sender.py  instagram_publish.py  news_graphic.py  process_digest.py  process_email.py  search_agent.py  thumbnail_resolve.py  user_service.py
docs/: DEPLOYMENT.md
web/: .vade-report  next.config.ts  package-lock.json  package.json
web/prisma/: schema.prisma
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(auth)/sign-in/[[...rest]]/: page.tsx
web/src/app/(auth)/sign-up/[[...rest]]/: page.tsx
web/src/app/api/pipeline/status/: route.ts
web/src/app/api/webhooks/clerk/: route.ts
web/src/app/dashboard/: page.tsx
web/src/app/verify-feed/: page.tsx
web/src/components/: Navbar.tsx  PipelineStatus.tsx  SiteFooter.tsx
web/src/lib/: db.ts  email.ts  get-digest.ts  mailer.ts
